--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="assest/css/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="header-inner">
+      <h1 class="header-head">Welcome To The Beach</h1>
+      <p class="header-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi officiis
+        ipsum officia numquam expedita ullam.
+      </p>
+      <button class="header-btn">Read More</button>
+    </div>
+    </header>
+    <section class="section"></section>
+    <section class="section"></section>
+    <section class="section"></section>
+    <section class="section"></section>
+    <section class="section"></section>
+  </body>
 </html>
