--- a/index.html
+++ b/index.html
@@ -8,18 +8,51 @@
   <body>
     <header>
       <div class="header-inner">
-      <h1 class="header-head">Welcome To The Beach</h1>
-      <p class="header-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi officiis
-        ipsum officia numquam expedita ullam.
-      </p>
-      <button class="header-btn">Read More</button>
-    </div>
+        <h1 class="header-head">Welcome To The Beach</h1>
+        <p class="header-text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+          officiis ipsum officia numquam expedita ullam.
+        </p>
+        <button class="header-btn">Read More</button>
+      </div>
     </header>
-    <section class="section"></section>
-    <section class="section"></section>
-    <section class="section"></section>
-    <section class="section"></section>
-    <section class="section"></section>
+    <section class="articles">
+    <div class="section1 article odd">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minus
+      impedit maxime, quae soluta quis cumque perferendis! Doloribus quaerat,
+      placeat iste facere, aspernatur ex cum veritatis laudantium, officia, non
+      porro exercitationem incidunt quis dolore? Officia ex accusamus expedita
+      optio, voluptatem minus? In maiores omnis aperiam earum ab molestiae
+      beatae laborum blanditiis incidunt, delectus dolor, id voluptates optio
+      aspernatur aliquam saepe atque labore? Tempore reprehenderit ab ipsam
+      perspiciatis ut, provident perferendis sapiente in numquam blanditiis,
+      enim, illo error nulla incidunt quos quidem ratione repellat ipsa
+      molestias veritatis? Mollitia, fugit dolore commodi porro repudiandae
+      atque, eos, ipsum quam culpa fuga deleniti quae.
+    </div>
+    <div class="section2 article even">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minus
+      impedit maxime, quae soluta quis cumque perferendis! Doloribus quaerat,
+      placeat iste facere, aspernatur ex cum veritatis laudantium, officia, non
+      porro exercitationem incidunt quis dolore? Officia ex accusamus expedita
+      optio, voluptatem minus? In maiores omnis aperiam earum ab molestiae
+      beatae laborum blanditiis incidunt, delectus dolor, id voluptates optio
+      aspernatur aliquam saepe atque labore? Tempore reprehenderit ab ipsam
+      perspiciatis ut, provident perferendis sapiente in numquam blanditiis,
+      enim, illo error nulla incidunt quos quidem ratione repellat ipsa
+      molestias veritatis? Mollitia, fugit dolore commodi porro repudiandae
+      atque, eos, ipsum quam culpa fuga deleniti quae.
+    </div>
+    <div class="section3 article lin-bl odd">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum
+      est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+    </div><div class="section4 article lin-bl even">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum
+      est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+    </div><div class="section5 article lin-bl odd">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa dolorum
+      est, molestias dolores quis sunt nobis temporibus veritatis libero odio!
+    </div>
+  </section>
   </body>
 </html>
